Bugzilla Bug 164070: fixed the bug that PR_ImplodeTime and PR_NormalizeTime only worked with years 1901-2099.  The patch is contributed by Shanmu <shanmus@gmail.com>. r=wtc.